--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -1,7 +1,7 @@
-# PPAS ORACLE 兼容性 之 序列（SEQUENCE）
+## PPAS ORACLE 兼容性 之 序列（SEQUENCE）
 ***
-## 一、Oracle版本
+### 一、Oracle版本
 
-## 二、Postgresql版本
+### 二、Postgresql版本
 
-## 三、PPAS版本
+### 三、PPAS版本
