--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -1,10 +1,9 @@
 ## PPAS ORACLE 兼容性 之 序列（SEQUENCE）
 ---
-    
-    序列（SEQUENCE）主要用来为多用户（SCHEMA）产生唯一的整数，最主要的应用：**为表自动生成主键**.
-    
+序列（SEQUENCE）主要用来为多用户（SCHEMA）产生唯一的整数，最主要的应用：**为表自动生成主键**.    
 ### 一、Oracle版本
-1. 基本语法结构
+1. **基本语法结构**
+
   ![CREATE SEQUENCE语法](https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/create_sequence.gif)
   
 2.
