--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -8,8 +8,6 @@
   
 2.
 
-3.
-
 ### 二、PostgreSQL版本
 1. **基本语法结构**
 ```
@@ -21,8 +19,6 @@ CREATE [ TEMPORARY | TEMP ] SEQUENCE [ IF NOT EXISTS ] name [ INCREMENT [ BY ] i
 
 2.
 
-3.
-
 ### 三、PPAS版本
 1. **基本语法结构**
 ```
@@ -32,6 +28,7 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 [ START WITH start ] [ CACHE cache | NOCACHE ] [ CYCLE ]
 ```
 
-2.
+2. 
 
-3. 
+### 四、Oracle ---> PPAS FAQ
+1. 
