--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -6,7 +6,29 @@
 
   ![CREATE SEQUENCE语法](https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/create_sequence.gif)
   
-2.
+2. **选项说明**
+<table>
+  <tr>
+    <th width=10%, bgcolor=yellow >参数选项</th>
+    <th width=40%, bgcolor=yellow>详细解释</th>
+    <th width="50%", bgcolor=yellow>备注</th>
+  </tr>
+  <tr>
+    <td bgcolor=#eeeeee>  </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td bgcolor=#00FF00>  </td>
+    <td> </td>
+    <td> </td>
+  <tr>
+    <td bgcolor=rgb(0,10,0)> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
+</table>
+
 
 ### 二、PostgreSQL版本
 1. **基本语法结构**
