--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -9,9 +9,9 @@
 2. **选项说明**
 <table>
   <tr>
-    <th width=10%, bgcolor=yellow >参数选项</th>
-    <th width=40%, bgcolor=yellow>详细解释</th>
-    <th width="50%", bgcolor=yellow>备注</th>
+    <th width=20%, bgcolor=yellow >参数选项</th>
+    <th width=60%, bgcolor=yellow>详细解释</th>
+    <th width=20%, bgcolor=yellow>备注</th>
   </tr>
   <tr>
     <td bgcolor=#eeeeee>  </td>
