--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -14,16 +14,21 @@
     <th width=20%, bgcolor=yellow>备注</th>
   </tr>
   <tr>
-    <td bgcolor=#eeeeee>  </td>
-    <td> </td>
+    <td bgcolor=#eeeeee> schema </td>
+    <td> 指定序列属主，不指定，默认在当前用户下 </td>
     <td> </td>
   </tr>
   <tr>
-    <td bgcolor=#00FF00>  </td>
-    <td> </td>
+    <td bgcolor=#00FF00> sequence </td>
+    <td> 序列名称，同一SCHEMA下，和其他对象不能同名 </td>
     <td> </td>
   <tr>
-    <td bgcolor=rgb(0,10,0)> </td>
+    <td bgcolor=rgb(0,10,0)> INCREMENT BY </td>
+    <td> 序列增长的步长，默认值是 1/-1，取决于是正向序列 还是反向序列。值可以是任意正数/负数，但不能为0 </td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td bgcolor=#00FF00)> START WITH </td>
     <td> </td>
     <td> </td>
   </tr>
