--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -13,40 +13,40 @@
     <th width=80%, bgcolor=yellow>详细解释</th>
   </tr>
   <tr>
-    <td bgcolor=#eeeeee> schema </td>
+    <td bgcolor=#eeeeee style="text-align:center"> schema </td>
     <td> 指定序列属主，不指定，默认在当前用户下 </td>
   </tr>
   <tr>
-    <td bgcolor=#00FF00> sequence </td>
+    <td bgcolor=#00FF00 style="text-align:center"> sequence </td>
     <td> 序列名称，同一SCHEMA下，和其他对象不能同名 </td>
   <tr>
-    <td bgcolor=rgb(0,10,0)> INCREMENT BY </td>
+    <td bgcolor=rgb(0,10,0) style="text-align:center"> INCREMENT BY </td>
     <td> 序列增长的步长。默认值是 1/-1，取决于是正向序列 还是反向序列。值可以是任意正数/负数，但不能为0 </td>
   </tr>
   <tr>
-    <td bgcolor=#00FF00)> START WITH </td>
+    <td bgcolor=#00FF00) style="text-align:center"> START WITH </td>
     <td> 指定序列的起始值 </td>
   </tr>
    <tr>
-    <td bgcolor=#eeeeee> MAXVALUE/NOMAXVALUE </td>
+    <td bgcolor=#eeeeee style="text-align:center"> MAXVALUE/NOMAXVALUE </td>
     <td> 指定序列的最大值。默认值：正向序列：10^28 -1; 反向序列：-1 </td>
   </tr>
   <tr>
-    <td bgcolor=#00FF00> MINVALUE/NOMINVALUE </td>
+    <td bgcolor=#00FF00 style="text-align:center"> MINVALUE/NOMINVALUE </td>
     <td> 指定序列的最小值。默认值：正向序列：1; 反向序列：-(10^27 -1) </td>
   <tr>
   </tr>
    <tr>
-    <td bgcolor=#eeeeee> CYCLE/NOCYCLE </td>
+    <td bgcolor=#eeeeee style="text-align:center"> CYCLE/NOCYCLE </td>
     <td> 序列达到最大值或者最小值时，是否继续生成值(不然直接报错)。正向序列：最小值; 反向序列：最大值</td>
   </tr>
   <tr>
-    <td bgcolor=#00FF00> CACHE/NOCACHE </td>
+    <td bgcolor=#00FF00 style="text-align:center"> CACHE/NOCACHE </td>
     <td> 预先分配在内存中的缓存值,最小值为2。最大值满足公式：(CEIL (MAXVALUE - MINVALUE)) / ABS (INCREMENT)，RAC环境建议使用，以提高性能，2个选项默认都不执行，则以默认cache是20 </td>
   <tr>
   </tr>
    <tr>
-    <td bgcolor=#eeeeee> ORDER/NOORDER </td>
+    <td bgcolor=#eeeeee style="text-align:center"> ORDER/NOORDER </td>
     <td> 确保序列产生值的顺序性。 产生timestamps值时有用，主键时无用。RAC环境建议使用，且使用exclusive模式时，总是有序的 </td>
   </tr>
 </table>
