--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -47,13 +47,17 @@
   </tr>
    <tr>
     <td bgcolor=#eeeeee style="text-align:center"> ORDER/NOORDER </td>
-    <td> 确保序列产生值的顺序性。 产生timestamps值时有用，主键时无用。RAC环境建议使用，且使用exclusive模式时，总是有序的 </td>
+    <td> 确保序列产生值的顺序性。 产生timestamps值时有用，主键时无用。RAC环境不建议使用，尤其是在并发高情况下。当使用exclusive模式时，总是有序的。要避免 NOCACHE+ORDER组合 </td>
   </tr>
 </table>
 
 3. **案例**
 ```
-
+CREATE SEQUENCE scott.emp_seq
+ START WITH 1000
+ INCREMENT BY 1
+ NOCACHE
+ NOCYCLE;
 ```
 
 ### 二、PostgreSQL版本
