--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -1,11 +1,21 @@
 ## PPAS ORACLE 兼容性 之 序列（SEQUENCE）
 ---
-序列（SEQUENCE）主要用来为多用户（SCHEMA）产生唯一的整数，最主要的应用：**为表自动生成主键**.    
+序列（SEQUENCE）主要用来为多用户（SCHEMA）产生唯一的整数，最主要的应用：**为表自动生成主键/唯一键**.    
 ### 一、Oracle版本
 1. **基本语法结构**
 
   ![CREATE SEQUENCE语法](https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/create_sequence.gif)
   
+  使用方式：CURRVAL：获取当前值；NEXTVAL：产生新值
+sequence.CURRVAL  
+sequence.NEXTVAL  
+或者
+schema.sequence.CURRVAL
+schema.sequence.NEXTVAL 
+或者
+schema.sequence.CURRVAL@dblink
+schema.sequence.NEXTVAL@dblink
+
 2. **选项说明**
 <table>
   <tr>
@@ -51,13 +61,18 @@
   </tr>
 </table>
 
-3. **案例**
+3. **使用案例**
 ```
 CREATE SEQUENCE scott.emp_seq
  START WITH 1000
  INCREMENT BY 1
  NOCACHE
  NOCYCLE;
+ 
+SELECT scott.emp_seq.CURRVAL FROM DUAL;
+ 
+SELECT scott.emp_seq.NEXTVAL FROM DUAL;
+
 ```
 
 ### 二、PostgreSQL版本
