--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -6,7 +6,8 @@
 
   ![CREATE SEQUENCE语法](https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/create_sequence.gif)
   
-  使用方式：CURRVAL：获取当前值；NEXTVAL：产生新值
+  使用方式：**CURRVAL**：获取当前值；**NEXTVAL**：产生新值
+```
 sequence.CURRVAL  
 sequence.NEXTVAL  
 或者
@@ -15,6 +16,7 @@ schema.sequence.NEXTVAL
 或者
 schema.sequence.CURRVAL@dblink
 schema.sequence.NEXTVAL@dblink
+```
 
 2. **选项说明**
 <table>
@@ -72,7 +74,6 @@ CREATE SEQUENCE scott.emp_seq
 SELECT scott.emp_seq.CURRVAL FROM DUAL;
  
 SELECT scott.emp_seq.NEXTVAL FROM DUAL;
-
 ```
 
 ### 二、PostgreSQL版本
