--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -85,7 +85,17 @@ CREATE [ TEMPORARY | TEMP ] SEQUENCE [ IF NOT EXISTS ] name [ INCREMENT [ BY ] i
     [ OWNED BY { table_name.column_name | NONE } ] 
 ```
 
-2.
+2. **参数选型说明（<font color=#0099ff >仅列举于Oracle有差异的部分</font>）**
+   TEMPORARY | TEMP: 临时序列创建于特殊的schema下,创建临时序列时，不可以指定schema名称，会话结束后自动删除序列，同时同名的永久序列不可见，除非加上schema名前缀。
+   最小值：-2^63-1
+   最大值：2^63-1
+   如果CYCLE/NO CYCLE 不指定，默认是 NO CYCLE
+   OWNED BY table_name.column_name|OWNED BY NONE：依赖于表或者列，列或者表删除，则序列自动删除,且表和序列必须在同一schema下。
+  
+   <font color=#0099ff>注意：序列值依赖于bigint算法：范围是 -9223372036854775808 ~ 9223372036854775807 </font>
+   
+3.    
+
 
 ### 三、PPAS版本
 1. **基本语法结构**
