--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -92,9 +92,55 @@ CREATE [ TEMPORARY | TEMP ] SEQUENCE [ IF NOT EXISTS ] name [ INCREMENT [ BY ] i
    + 如果CYCLE/NO CYCLE 不指定，默认是 NO CYCLE
    + OWNED BY table_name.column_name|OWNED BY NONE：依赖于表或者列，列或者表删除，则序列自动删除,且表和序列必须在同一schema下。
   
-   <font color=#0099ff>注意：序列值依赖于bigint算法：范围是 -9223372036854775808 ~ 9223372036854775807 </font>
+   **注意：序列值依赖于bigint算法,范围是 -9223372036854775808 ~ 9223372036854775807**
    
-3.    
+3. **使用案例-基于序列函数**
+  <table>
+  <tr>
+    <th width=40%, bgcolor=yellow >函数</th>
+    <th width=20%, bgcolor=yellow>返回类型</th>
+    <th width=40%, bgcolor=yellow>描述</th>
+  </tr>
+  <tr>
+    <td bgcolor=#eeeeee style="text-align:center"> currval(regclass) </td>
+    <td> bigint </td>
+    <td> 返回特殊序列最近nextval获取的值 </td>
+  </tr>
+  <tr>
+    <td bgcolor=#00FF00 style="text-align:center"> lastval() </td>
+    <td> bigint </td>
+    <td> 返回任意序列最近nextval获取的值 </td>
+  </tr>
+  <tr>
+    <td bgcolor=#eeeeee style="text-align:center"> nextval(regclass) </td>
+    <td> bigint </td>
+    <td> 序列返回新值 </td>
+  </tr>
+  <tr>
+    <td bgcolor=#00FF00 style="text-align:center"> setval(regclass, bigint)	</td>
+    <td> bigint </td>
+    <td> 设置序列当前值 </td>
+  </tr>
+  <tr>
+    <td bgcolor=#eeeeee style="text-align:center"> setval(regclass, bigint, boolean) </td>
+    <td> bigint </td>
+    <td> 设置序列当前值和is_called标记 </td>
+  </tr>
+   
+  默认regclass的值是pg_class中对应序列的OID的值，但是本身已经做了转换为在单引号内的字面量，默认转为小写，例如：
+```
+nextval('foo')      operates on sequence foo
+nextval('FOO')      operates on sequence foo
+nextval('"Foo"')    operates on sequence Foo
+或者
+nextval('myschema.foo')     operates on myschema.foo
+nextval('"myschema".foo')   same as above
+nextval('foo')              searches search path for foo
+或者
+SELECT setval('foo', 42);           Next nextval will return 43
+SELECT setval('foo', 42, true);     Same as above
+SELECT setval('foo', 42, false);    Next nextval will return 42
+```
 
 
 ### 三、PPAS版本
