--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -95,7 +95,7 @@ CREATE [ TEMPORARY | TEMP ] SEQUENCE [ IF NOT EXISTS ] name [ INCREMENT [ BY ] i
    **注意：序列值依赖于bigint算法,范围是 -9223372036854775808 ~ 9223372036854775807**
    
 3. **使用案例-基于序列函数**
-  <table>
+<table>
   <tr>
     <th width=40%, bgcolor=yellow >函数</th>
     <th width=20%, bgcolor=yellow>返回类型</th>
@@ -126,8 +126,9 @@ CREATE [ TEMPORARY | TEMP ] SEQUENCE [ IF NOT EXISTS ] name [ INCREMENT [ BY ] i
     <td> bigint </td>
     <td> 设置序列当前值和is_called标记 </td>
   </tr>
+</table>
    
-  默认regclass的值是pg_class中对应序列的OID的值，但是本身已经做了转换为在单引号内的字面量，默认转为小写，例如：
+默认regclass的值是pg_class中对应序列的OID的值，但是本身已经做了转换为在单引号内的字面量，默认转为小写，例如：
 ```
 nextval('foo')      operates on sequence foo
 nextval('FOO')      operates on sequence foo
