--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -18,7 +18,7 @@ schema.sequence.CURRVAL@dblink
 schema.sequence.NEXTVAL@dblink
 ```
 
-2. **选项说明**
+2. **参数选项说明**
 <table>
   <tr>
     <th width=20%, bgcolor=yellow >参数选项</th>
@@ -94,12 +94,12 @@ CREATE [ TEMPORARY | TEMP ] SEQUENCE [ IF NOT EXISTS ] name [ INCREMENT [ BY ] i
   
    **注意：序列值依赖于bigint算法,范围是 -9223372036854775808 ~ 9223372036854775807**
    
-3. **使用案例-基于序列函数**
+3. **使用方式-基于序列函数**
 <table>
   <tr>
     <th width=40%, bgcolor=yellow >函数</th>
-    <th width=20%, bgcolor=yellow>返回类型</th>
-    <th width=40%, bgcolor=yellow>描述</th>
+    <th width=15%, bgcolor=yellow>返回类型</th>
+    <th width=45%, bgcolor=yellow>描述</th>
   </tr>
   <tr>
     <td bgcolor=#eeeeee style="text-align:center"> currval(regclass) </td>
@@ -153,7 +153,8 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 [ START WITH start ] [ CACHE cache | NOCACHE ] [ CYCLE ]
 ```
 
-2. 
+2. **参数选项说明**
+**与PG基本类同**
 
 ### 四、Oracle ---> PPAS FAQ
 1. 
