--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -153,8 +153,7 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 [ START WITH start ] [ CACHE cache | NOCACHE ] [ CYCLE ]
 ```
 
-2. **参数选项说明**
-**与PG基本类同**
+2. **参数选项说明** ===> **与PG基本类同**
 
 ### 四、Oracle ---> PPAS FAQ
 1. 
