--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -156,4 +156,5 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 2. **参数选项说明** ===> **与PG基本类同**
 
 ### 四、Oracle ---> PPAS FAQ
-1. 
+Q1: **序列的起始值比PPAS支持的最大值还大 ？？？**
+
