--- a/ppas/20180622/20180622_01.md
+++ b/ppas/20180622/20180622_01.md
@@ -157,4 +157,46 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 
 ### 四、Oracle ---> PPAS FAQ
 Q1: **序列的起始值比PPAS支持的最大值还大 ？？？**
+```
+案例：
+CREATE SEQUENCE SEQ_EMP MINVALUE 1 MAXVALUE 9223372036854775807 INCREMENT BY 1 START WITH 10000000000000235132 CACHE 20 NO CYCLE; 
 
+错误信息：ERROR:  value "10000000000000235132" is out of range for type bigint
+
+
+解决方案：Oracle迁移的序列的初始值比PPAS正向序列可以支持的最大值 9223372036854775807 还大，由于序列通常主要用来生成主键或者唯一键，所以可以考虑通过下面的方式记性改写：
+
+CREATE SEQUENCE SEQ_EMP MINVALUE 1 MAXVALUE 9223372036854775807 INCREMENT BY 1 START WITH 235132 CACHE 20 NO CYCLE;
+
+CREATE TABLE foo (id numeric DEFAULT 10000000000000000000 +nextval('seq_emp'),name varchar2(20));
+
+insert into foo(name) values('hangzhou');
+
+select * from foo;
+
+这里只是提供一种解决的思路，仅供参考。
+
+```
+Q2: **Oracle的序列的最大值比PPAS的最大值要大？？？**
+```
+案例：
+CREATE SEQUENCE SCOTT.foo_seq MINVALUE 1 MAXVALUE 18446744073709552000 INCREMENT BY 1 START WITH 156 NOCACHE NO CYCLE;
+
+错误信息：ERROR:  value "18446744073709552000" is out of range for type bigint
+
+解决方案：由于PPAS/PG的正向序列可以支持的序列最大值为 9223372036854775807，因此可以考虑把Oracle对应的最大值修改为PPAS可以支持的最大值，此值默认一般是足够使用了。
+
+```
+
+Q3: **Oracle 和 PPAS的差异点？？？**
+1. NOCYCLE 变为 NO CYCLE
+2. Oracle默认是CACHE 20,而 PPAS默认是NOCACHE
+3. Oracle,PPAS不支持OWNED BY 语法,PG支持；PPAS不支持ORDER 语法
+4. 最大值 和 最小值的取值范围不一样
+
+
+###五、参考链接
+1. [](https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_6015.htm#SQLRF01314)
+2. [](https://www.postgresql.org/docs/9.6/static/sql-createsequence.html)
+3. [](https://www.postgresql.org/docs/9.6/static/functions-sequence.html)
+4. [](https://get.enterprisedb.com/docs/Database_Compatibility_for_Oracle_Developers_Reference_Guide_v9.6.pdf)
