--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -1,1 +1,34 @@
 ## Oracle PPAS 兼容性分析 之 SQL关键字(SQL Key Words)
+---
+### 一、识符和关键字简介
+  关键字即SQL语言中具有特定意义的词，和标识符类似。
+  SQL标识符和关键词必须以一个字母（a-z，也可以是带变音符的字母和非拉丁字母）或一个下划线（_）开始。后续字符可以是字母、下划线（_）、数字（0-9）或美元符号（$）。
+   通常系统中一个标识符的长度不能超过 NAMEDATALEN-1 字节，否则会被截断。默认情况下，NAMEDATALEN 的值为64，因此标识符的长度上限为63字节。
+   如果这个限制有问题，可以在src/include/pg_config_manual.h中修改 NAMEDATALEN 常量。
+
+   关键词和不被引号修饰的标识符是大小写不敏感的,默认是转成小写。一个常见的习惯是将关键词写成大写，而名称写成小写。
+
+   第二种形式的标识符：受限标识符或被引号修饰的标识符。它是由双引号（"）包围的一个任意字符序列。一个受限标识符总是一个标识符而不会是一个关键字。
+
+   PostgreSQL将非受限名字转换为小写形式与SQL标准是不兼容 的，SQL标准中要求将非受限名称转换为大写形式（如：Oracle数据库）。
+
+   
+   SQL关键字区分保留关键字和非保留关键字。 根据标准：
+        保留关键词只是真正的关键词，决不能用它们做标识符。
+        非保留关键词只是在特定的环境里有特殊的含义，而在其它环境里可以用做标识符。大多数非保留关键词实际上都是SQL指定的内建表和函数的名字。
+        而非保留关键词的概念实质上只是用来声明在某些场合中在一个词上附加了一些预先定义的含义。
+   
+   即使保留关键词在PostgreSQL中都没有完全被保留，而是可以用做列标签（例如SELECT 55 AS CHECK，虽然CHECK是一个保留关键词）。
+   
+   被允许作为列名或表名的关键词分类为"非保留"，非保留关键字，某些不能用做函数或者数据类型名字
+        
+   "保留"关键字：是那些不允许作为列名或表名的记号。一些保留关键词被允许作为函数或数据类型的名称。否则保留关键词只允许作为一个"AS"列标签名称。
+
+
+### 二、PPAS/PG 关键字列表
+1.**保留关键字和非保留关键字适用范围**
+
+
+2. **PPAS/PG关键字列表**
++ [PostgreSQL9.6关键字](https://www.postgresql.org/docs/9.6/static/sql-keywords-appendix.html) 
++ [PostgreSQL10关键字](https://www.postgresql.org/docs/10/static/sql-keywords-appendix.html)
