--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -6,25 +6,22 @@
   + 关键词和不被引号修饰的标识符是大小写不敏感的,默认是转成小写。一个常见的习惯是将关键词写成大写，而名称写成小写。
   + 第二种形式的标识符：受限标识符或被引号修饰的标识符。它是由双引号（"）包围的一个任意字符序列。一个受限标识符总是一个标识符而不会是一个关键字。
   + PostgreSQL将非受限名字转换为小写形式与SQL标准是不兼容 的，SQL标准中要求将非受限名称转换为大写形式（如：Oracle数据库）。
-  + SQL关键字区分保留关键字和非保留关键字。 根据标准：
-        保留关键词只是真正的关键词，决不能用它们做标识符。
-        非保留关键词只是在特定的环境里有特殊的含义，而在其它环境里可以用做标识符。大多数非保留关键词实际上都是SQL指定的内建表和函数的名字。
-        而非保留关键词的概念实质上只是用来声明在某些场合中在一个词上附加了一些预先定义的含义。
-   
+  + SQL关键字区分保留关键字和非保留关键字。 根据标准：保留关键词只是真正的关键词，决不能用它们做标识符。非保留关键词只是在特定的环境里有特殊的含义，而在其它环境里可以用做标识符。大多数非保留关键词实际上都是SQL指定的内建表和函数的名字。而非保留关键词的概念实质上只是用来声明在某些场合中在一个词上附加了一些预先定义的含义。
   + 即使保留关键词在PostgreSQL中都没有完全被保留，而是可以用做列标签（例如SELECT 55 AS CHECK，虽然CHECK是一个保留关键词）。
   + 被允许作为列名或表名的关键词分类为"非保留"，非保留关键字，某些不能用做函数或者数据类型名字
   + "保留"关键字：是那些不允许作为列名或表名的记号。一些保留关键词被允许作为函数或数据类型的名称。否则保留关键词只允许作为一个"AS"列标签名称。
   
 ### 二、PPAS/PG 关键字列表
-1.**保留关键字和非保留关键字适用范围**
+1. **保留关键字和非保留关键字适用范围**
   + 关键字分类及适用范围
+  
     |编号|类型|说明|
-    |:-:|:-|:-|
+    |:-: |-|-|
     |1|reserved|不允许为任意对象和变量名称,但可以为过程、函数中声明变量(非传参变量名称)或者包/包体中TYPE的名称|
     |2|reserved (can be function or type)|只允许为过程、函数、包/包体(内部TYPE IS RECORD中变量不允许)对象或者变量名称|
     |3|non-reserved|允许为任意对象或者变量名称|
     |4|non-reserved (cannot be function or type)|不允许为过程、函数、包、包/包体的对象名称以及传参变量名称|
-    |5| |允许为任意对象或者变量名称|
+    |5||允许为任意对象或者变量名称|
     
     **注意：作为"AS"列标签名称都适用。**
   
