--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -1,6 +1,6 @@
 ## Oracle PPAS 兼容性分析 之 SQL关键字(SQL Key Words)
 ---
-### 一、识符和关键字简介
+### 一、标识符和关键字简介
   + 关键字即SQL语言中具有特定意义的词，和标识符类似。
   + SQL标识符和关键词必须以一个字母（a-z，也可以是带变音符的字母和非拉丁字母）或一个下划线（_）开始。后续字符可以是字母、下划线（_）、数字（0-9）或美元符号（$）。通常系统中一个标识符的长度不能超过 NAMEDATALEN-1 字节，否则会被截断。默认情况下，NAMEDATALEN 的值为64，因此标识符的长度上限为63字节。如果这个限制有问题，可以在src/include/pg_config_manual.h中修改 NAMEDATALEN 常量。
   + 关键词和不被引号修饰的标识符是大小写不敏感的,默认是转成小写。一个常见的习惯是将关键词写成大写，而名称写成小写。
@@ -26,6 +26,11 @@
     **注意：作为"AS"列标签名称都适用。**
   
   + 核心关键字列表（这里以1，2，4为主）
+    |编号|SQL关键字(Key Word)|PostgreSQL9.6|  
+    |:-:|-|-|
+    |1  |ALL               |   reserved
+    |2  |ANALYSE	       |     reserved
+  
 
 2. **PPAS/PG关键字列表**
 + [PostgreSQL9.6 关键字](https://www.postgresql.org/docs/9.6/static/sql-keywords-appendix.html) 
