--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -28,8 +28,8 @@
   + 核心关键字列表（这里以1，2，4为主）
     |编号|SQL关键字(Key Word)|PostgreSQL9.6|  
     |:-:|-|-|
-    |1  |ALL               |   reserved
-    |2  |ANALYSE	       |     reserved
+    |1|ALL               |   reserved|
+    |2|ANALYSE	       |     reserved|
   
 
 2. **PPAS/PG关键字列表**
