--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -26,10 +26,11 @@
     **注意：作为"AS"列标签名称都适用。**
   
   + 核心关键字列表（这里以1，2，4为主）
-    |编号|SQL关键字(Key Word)|PostgreSQL9.6|  
+  
+    |编号|SQL关键字(Key Word)|PostgreSQL9.6|
     |:-:|-|-|
-    |1|ALL               |   reserved|
-    |2|ANALYSE	       |     reserved|
+    |1|ALL|reserved
+    |2|ANALYSE|reserved
   
 
 2. **PPAS/PG关键字列表**
