--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -29,9 +29,156 @@
   
     |编号|SQL关键字(Key Word)|PostgreSQL9.6|
     |:-:|-|-|
-    |1|ALL|reserved
-    |2|ANALYSE|reserved
-  
+   |1  |ALL               |   reserved
+|2  |ANALYSE	       |     reserved	 	 	 
+|3  |ANALYZE	      |      reserved	 	 	 
+|4  |AND	          |      reserved	
+|5  |ANY	          |      reserved
+|6  |ARRAY	        |    reserved
+|7  |AS	           |     reserved	
+|8  |ASC	          |      reserved
+|9  |ASYMMETRIC	   |     reserved
+|10 |AUTHORIZATION	|    reserved (can be function or type)
+|11 |BETWEEN	      |      non-reserved (cannot be function or type)	
+|12 |BIGINT	       |     non-reserved (cannot be function or type)	 
+|13 |BINARY	       |     reserved (can be function or type)	 
+|14 |BIT	          |      non-reserved (cannot be function or type)
+|15 |BOOLEAN	      |      non-reserved (cannot be function or type)
+|16 |BOTH	         |       reserved
+|17 |CASE	         |       reserved
+|18 |CAST	         |       reserved
+|19 |CHAR	         |       non-reserved (cannot be function or type)	
+|20 |CHARACTER	    |    non-reserved (cannot be function or type)
+|21 |CHECK	        |    reserved
+|22 |COALESCE	     |       non-reserved (cannot be function or type)
+|23 |COLLATE	      |      reserved
+|24 |COLLATION	    |    reserved (can be function or type)
+|25 |COLUMN	       |     reserved
+|26 |CONCURRENTLY	 |       reserved (can be function or type)
+|27 |CONSTRAINT	   |     reserved
+|28 |CREATE	       |     reserved	
+|29 |CROSS	        |    reserved (can be function or type)
+|30 |CURRENT_CATALOG|	    reserved
+|31 |CURRENT_DATE	 |       reserved
+|32 |CURRENT_ROLE	 |       reserved
+|33 |CURRENT_SCHEMA|	    reserved (can be function or type)	 
+|34 |CURRENT_TIME	 |       reserved	
+|35 |CURRENT_TIMESTAMP|	reserved
+|36 |CURRENT_USER	 |       reserved
+|37 |DEC	          |      non-reserved (cannot be function or type)	
+|38 |DECIMAL	      |      non-reserved (cannot be function or type)
+|39 |DEFAULT	      |      reserved
+|40 |DEFERRABLE	   |     reserved
+|41 |DESC	         |       reserved
+|42 |DISTINCT	     |       reserved
+|43 |DO	           |     reserved
+|44 |ELSE	         |       reserved
+|45 |END	          |      reserved
+|46 |EXCEPT	       |     reserved
+|47 |EXISTS	       |     non-reserved (cannot be function or type)
+|48 |EXTRACT	      |      non-reserved (cannot be function or type)	
+|49 |FALSE	        |    reserved
+|50 |FETCH	        |    reserved
+|51 |FLOAT	        |    non-reserved (cannot be function or type)
+|52 |FOR	          |      reserved
+|53 |FOREIGN	      |      reserved
+|54 |FREEZE	       |     reserved (can be function or type)	 	 	 
+|55 |FROM	         |       reserved
+|56 |FULL	         |       reserved (can be function or type)
+|57 |GRANT	        |    reserved
+|58 |GREATEST	     |       non-reserved (cannot be function or type)	 	 	 
+|59 |GROUP	        |    reserved	
+|60 |GROUPING      |      	non-reserved (cannot be function or type)
+|61 |HAVING	       |     reserved
+|62 |ILIKE	        |    reserved (can be function or type)
+|63 |IN	           |     reserved
+|64 |INITIALLY	    |    reserved
+|65 |INNER	        |    reserved (can be function or type)
+|66 |INOUT	        |    non-reserved (cannot be function or type)	
+|67 |INT	          |      non-reserved (cannot be function or type)	
+|68 |INTEGER	      |      non-reserved (cannot be function or type)
+|69 |INTERSECT	    |    reserved
+|70 |INTERVAL	     |       non-reserved (cannot be function or type)	
+|71 |INTO          |   	reserved
+|72 |IS	           |     reserved (can be function or type)	
+|73 |ISNULL        |   	reserved (can be function or type)
+|74 |JOIN          |   	reserved (can be function or type)
+|75 |LATERAL	      |      reserved
+|76 |LEADING	      |      reserved
+|77 |LEAST	        |    non-reserved (cannot be function or type)	 	 	 
+|78 |LEFT	         |       reserved (can be function or type)
+|79 |LIKE	         |       reserved (can be function or type)
+|80 |LIMIT	        |    reserved
+|81 |LOCALTIME	    |    reserved		 
+|82 |LOCALTIMESTAMP|	    reserved
+|83 |NATIONAL	     |       non-reserved (cannot be function or type)	
+|84 |NATURAL	      |      reserved (can be function or type)	
+|85 |NCHAR	        |    non-reserved (cannot be function or type)
+|86 |NONE	         |       non-reserved (cannot be function or type)
+|87 |NOT	          |      reserved
+|88 |NOTNULL	      |      reserved (can be function or type)
+|89 |NULL	         |       reserved
+|90 |NULLIF        |   	non-reserved (cannot be function or type)
+|91 |NUMERIC	      |      non-reserved (cannot be function or type)
+|92 |OFFSET	       |     reserved
+|93 |ON	           |     reserved	
+|94 |ONLY	         |       reserved
+|95 |OR	           |     reserved	
+|96 |ORDER	        |    reserved
+|97 |OUT	          |      non-reserved (cannot be function or type)	 
+|98 |OUTER	        |    reserved (can be function or type)
+|99 |OVERLAPS	     |       reserved (can be function or type)	
+|100|OVERLAY	      |      non-reserved (cannot be function or type)
+|101|PLACING	      |      reserved
+|102|POSITION	     |       non-reserved (cannot be function or type)
+|103|PRECISION	    |    non-reserved (cannot be function or type)
+|104|PRIMARY	      |      reserved
+|105|REAL	         |       non-reserved (cannot be function or type)
+|106|REFERENCES	   |     reserved	
+|107|RETURNING	    |    reserved
+|108|RIGHT	        |    reserved (can be function or type)
+|109|ROW	          |      non-reserved (cannot be function or type)
+|110|SELECT	       |     reserved
+|111|SESSION_USER	 |       reserved
+|112|SETOF	        |    non-reserved (cannot be function or type)
+|113|SIMILAR	      |      reserved (can be function or type)
+|114|SMALLINT	     |       non-reserved (cannot be function or type)
+|115|SOME	         |       reserved
+|116|SUBSTRING	    |    non-reserved (cannot be function or type)
+|117|SYMMETRIC	    |    reserved
+|118|TABLE	        |    reserved
+|119|TABLESAMPLE	  |      reserved (can be function or type)
+|120|THEN	         |       reserved
+|121|TIME	         |       non-reserved (cannot be function or type)	
+|122|TIMESTAMP	    |    non-reserved (cannot be function or type)
+|123|TO	           |     reserved
+|124|TRAILING      |   	reserved
+|125|TREAT	        |    non-reserved (cannot be function or type)
+|126|TRIM	         |       non-reserved (cannot be function or type)
+|127|TRUE	         |       reserved
+|128|UNION	        |    reserved	
+|129|UNIQUE	       |     reserved
+|130|USER	         |       reserved
+|131|USING	        |    reserved
+|132|VALUES	       |     non-reserved (cannot be function or type)
+|133|VARCHAR	      |      non-reserved (cannot be function or type)	
+|134|VARIADIC	     |       reserved
+|135|VERBOSE	      |      reserved (can be function or type)
+|136|WHEN	         |       reserved
+|137|WHERE	        |    reserved
+|138|WINDOW	       |     reserved	 
+|139|WITH	         |       reserved
+|140|XMLATTRIBUTES	|    non-reserved (cannot be function or type)
+|141|XMLCONCAT	    |    non-reserved (cannot be function or type)
+|142|XMLELEMENT	   |     non-reserved (cannot be function or type)		 
+|143|XMLEXISTS	    |    non-reserved (cannot be function or type)	 
+|144|XMLFOREST	    |    non-reserved (cannot be function or type)
+|145|XMLNAMESPACES	|    non-reserved (cannot be function or type)		 
+|146|XMLPARSE	     |       non-reserved (cannot be function or type)		 
+|147|XMLPI	        |    non-reserved (cannot be function or type
+|148|XMLROOT	      |      non-reserved (cannot be function or type)
+|149|XMLSERIALIZE	 |       non-reserved (cannot be function or type)		 
+|150|XMLTABLE	     |       non-reserved (cannot be function or type)
 
 2. **PPAS/PG关键字列表**
 + [PostgreSQL9.6 关键字](https://www.postgresql.org/docs/9.6/static/sql-keywords-appendix.html) 
