--- a/ppas/20180628/20180628_02.md
+++ b/ppas/20180628/20180628_02.md
@@ -1,6 +1,46 @@
 ## Oracle PPAS 兼容性分析 之 数据库对象同名
 ---
 ### 一、Oracle数据库对象同名
+  Oracle数据库的
+  ```
+SQL> set lines 200 pages 1000
+SQL> col namespace_object_type for a80
+SQL> select namespace,listagg(object_type,',') within group(order by namespace) as namespace_object_type
+  2  from (select distinct namespace,object_type 
+  3          from dba_objects) 
+  4  group by namespace;
+
+ NAMESPACE NAMESPACE_OBJECT_TYPE
+---------- --------------------------------------------------------------------------------
+         1 DESTINATION,FUNCTION,INDEXTYPE,JAVA CLASS,JOB,JOB CLASS,LIBRARY,OPERATOR,PACKAGE
+           ,PROCEDURE,PROGRAM,SCHEDULE,SCHEDULER GROUP,SEQUENCE,SYNONYM,TABLE,TABLE PARTITI
+           ON,TABLE SUBPARTITION,TYPE,VIEW,WINDOW
+
+         2 PACKAGE BODY,TYPE BODY
+         3 TRIGGER
+         4 INDEX,INDEX PARTITION
+         5 CLUSTER
+         8 LOB,LOB PARTITION
+         9 DIRECTORY
+        10 QUEUE
+        13 JAVA SOURCE
+        14 JAVA RESOURCE
+        19 MATERIALIZED VIEW
+        21 CONTEXT
+        23 RULE SET
+        24 CONSUMER GROUP,RESOURCE PLAN
+        25 XML SCHEMA
+        32 JAVA DATA
+        36 RULE
+        38 EVALUATION CONTEXT
+        51 UNDEFINED
+        64 EDITION
+           DATABASE LINK
+
+21 rows selected.
+
+SQL>
+  ```
 
 
 ### 二、PPAS/PG数据库对象同名
