--- a/ppas/20180628/20180628_02.md
+++ b/ppas/20180628/20180628_02.md
@@ -41,7 +41,7 @@ SQL> select namespace,listagg(object_type,',') within group(order by namespace) 
 
 SQL>
   ```
-  其实Oracle数据库的对象的命名是通过命令空间namespace开控制的，在相同namespace下的对象在同一schema下是不可以同名的，但是相同schema不同namespace下的
+  其实Oracle数据库对象的命名是通过命令空间namespace控制的，在相同namespace下的对象在同一schema下是不可以同名的，但是相同schema不同namespace下的
 的对象是可以同名的，如上面的SQL显示，TABLE和SEQUENCE在同一namespace，因此在同一schema下是不可以同名的，但是SEQUENCE和INDEX在不同的namespace中，因此在相同schema下是可以同名的。
 
 
