--- a/ppas/20180628/20180628_02.md
+++ b/ppas/20180628/20180628_02.md
@@ -44,5 +44,25 @@ SQL>
   其实Oracle数据库对象的命名是通过命令空间namespace控制的，在相同namespace下的对象在同一schema下是不可以同名的，但是相同schema不同namespace下的
 的对象是可以同名的，如上面的SQL显示，TABLE和SEQUENCE在同一namespace，因此在同一schema下是不可以同名的，但是SEQUENCE和INDEX在不同的namespace中，因此在相同schema下是可以同名的。
 
-
 ### 二、PPAS/PG数据库对象同名
+   PPAS/PG的数据库对象同样是基于namespace来命名的，主要情况和Oracle类似。每类对象获取主要从以下视图：
+   
+   |编号|视图名称|对象类型|说明|
+   |:-:|-|-|-|
+   |1|pg_class|r = ordinary table, i = index, S = sequence, v = view, m = materialized view, c = composite type, t = TOAST table, f = foreign table|通过relkind字段可以获取|
+   |2|pg_constraint|c = check constraint, f = foreign key constraint, p = primary key constraint, u = unique constraint, t = constraint trigger, x = exclusion constraint|通过contype字段可以获取|
+   |3|pg_proc|functions, procedures||
+   |4|pg_trigger|triggers||
+   |5|pg_matviews|materialized view||
+   |6|pg_synonym|synonyms|PPAS独有|
+   
+   另外还有Database link、Package、Packeage等对象和上面对象一样，**默认都是同一个namespace。**
+   
+### 三、Oracle ===> PPAS FAQ
+
+
+
+### 四、参考链接
+1.[https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements008.htm#SQLRF51129](https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements008.htm#SQLRF51129)
+2.[https://docs.oracle.com/cd/E11882_01/timesten.112/e21642/names.htm#TTSQL445](https://docs.oracle.com/cd/E11882_01/timesten.112/e21642/names.htm#TTSQL445)
+3.[https://www.postgresql.org/docs/9.6/static/catalog-pg-class.html](https://www.postgresql.org/docs/9.6/static/catalog-pg-class.html)
