--- a/ppas/20180628/20180628_02.md
+++ b/ppas/20180628/20180628_02.md
@@ -44,6 +44,8 @@ SQL>
   其实Oracle数据库对象的命名是通过命令空间namespace控制的，在相同namespace下的对象在同一schema下是不可以同名的，但是相同schema不同namespace下的
 的对象是可以同名的，如上面的SQL显示，TABLE和SEQUENCE在同一namespace，因此在同一schema下是不可以同名的，但是SEQUENCE和INDEX在不同的namespace中，因此在相同schema下是可以同名的。
 
+  
+
 ### 二、PPAS/PG数据库对象同名
    PPAS/PG的数据库对象同样是基于namespace来命名的，主要情况和Oracle类似。每类对象获取主要从以下视图：
    
@@ -56,11 +58,20 @@ SQL>
    |5|pg_matviews|materialized view||
    |6|pg_synonym|synonyms|PPAS独有|
    
-   另外还有Database link、Package、Packeage等对象和上面对象一样，**默认都是同一个namespace。**
+   另外还有Database link、Package、Packeage等对象和上面对象一样，**默认都是同一个namespace**，因此同一schema下的所有对象都不可以同名。
    
 ### 三、Oracle ===> PPAS FAQ
+   1、Oracle数据库
+      + Oracle中每类对象的命名空间namespace是固定的。但是存在不同的值。
+      + Oracle 序列名和约束名(底层被当做index)处理可以一样；  序列名和索引名可以一样。
+      + 物化视图(Materialized view) 虽然和TABLE等对象不在同一个namespace，但是其底层会创建1个同名的表，因此在同一schema下MV和TABLE是不可以同名的。
+      
+   2、PPAS/PG数据库
+      + PPAS中每类对象的命名空间namespace是固定的。但是是同1个值。
+      + PPAS 序列名和约束名不可以一样；序列名和索引名不可以一样
 
-
+   3、列名、变量名是标识符 可以和对象名同名。
+   
 
 ### 四、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements008.htm#SQLRF51129](https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements008.htm#SQLRF51129)
