--- a/ppas/20180628/20180628_02.md
+++ b/ppas/20180628/20180628_02.md
@@ -61,16 +61,18 @@ SQL>
    另外还有Database link、Package、Packeage等对象和上面对象一样，**默认都是同一个namespace**，因此同一schema下的所有对象都不可以同名。
    
 ### 三、Oracle ===> PPAS FAQ
-   1、Oracle数据库
+   1. Oracle数据库
+   
       + Oracle中每类对象的命名空间namespace是固定的。但是存在不同的值。
       + Oracle 序列名和约束名(底层被当做index)处理可以一样；  序列名和索引名可以一样。
       + 物化视图(Materialized view) 虽然和TABLE等对象不在同一个namespace，但是其底层会创建1个同名的表，因此在同一schema下MV和TABLE是不可以同名的。
       
-   2、PPAS/PG数据库
+   2. PPAS/PG数据库
+   
       + PPAS中每类对象的命名空间namespace是固定的。但是是同1个值。
       + PPAS 序列名和约束名不可以一样；序列名和索引名不可以一样
 
-   3、列名、变量名是标识符 可以和对象名同名。
+   3. 列名、变量名是标识符 可以和对象名同名。
    
 
 ### 四、参考链接
