--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -22,7 +22,7 @@
     |3|non-reserved|允许为任意对象或者变量名称|
     |4|non-reserved (cannot be function or type)|不允许为过程、函数、包、包/包体的对象名称以及传参变量名称|
     |5||允许为任意对象或者变量名称|
-    |6|系统保留列|只是不允许未列名，目前6个系统保留列为：oid、tableoid、xmin、xmax、cmin、cmax、ctid|
+    |6|系统保留列|只是不允许为列名，目前6个系统保留列为：oid、tableoid、xmin、xmax、cmin、cmax、ctid|
     
     **注意：作为"AS"列标签名称都适用。**
   
