--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -20,9 +20,9 @@
     |1|reserved|不允许为任意对象和变量名称,但可以为过程、函数中声明变量(非传参变量名称)或者包/包体中TYPE的名称|
     |2|reserved (can be function or type)|只允许为过程、函数、包/包体(内部TYPE IS RECORD中变量不允许)对象或者变量名称|
     |3|non-reserved|允许为任意对象或者变量名称|
-    |4|non-reserved (cannot be function or type)|不允许为过程、函数、包、包/包体的对象名称以及传参变量名称|
+    |4|non-reserved (cannot be function or type)|不允许为过程、函数、包、包体的对象名称以及传参变量名称|
     |5||允许为任意对象或者变量名称|
-    |6|系统保留列|只是不允许为列名，目前6个系统保留列为：oid、tableoid、xmin、xmax、cmin、cmax、ctid|
+    |6|系统保留列|只是不允许为列名，目前6个系统保留列为：oid、tableoid、xmin、xmax、cmin、cmax、ctid，oid可以不可以为列名取决于default_with_oids的值为on/off|
     
     **注意：作为"AS"列标签名称都适用。**
   
