--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -1,7 +1,8 @@
 ## Oracle PPAS 兼容性分析 之 REMAINDER函数
 ---
 
-### 一、背景介绍
+### 一、Oracle：REMAINDER函数
+https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/remainder.gif
 
 
-### 二、解决方案
+### 二、PPAS解决方案
