--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -2,7 +2,13 @@
 ---
 
 ### 一、Oracle：REMAINDER函数
-https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/remainder.gif
+![REMAINDER语法](https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/remainder.gif)
+
+
 
 
 ### 二、PPAS解决方案
+
+
+### 三、参考连接
+1.[https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions152.htm#SQLRF06312](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions152.htm#SQLRF06312)
