--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -1,8 +1,8 @@
-## Oracle PPAS 兼容性分析 之 REMAINDER函数
+## Oracle PPAS 兼容性分析 之 
 ---
 
-### 一、Oracle：REMAINDER函数
-![REMAINDER语法](https://docs.oracle.com/cd/E11882_01/server.112/e41084/img/remainder.gif)
+### 一、Oracle
+![]()
 
 
 
@@ -11,4 +11,4 @@
 
 
 ### 三、参考连接
-1.[https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions152.htm#SQLRF06312](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions152.htm#SQLRF06312)
+1.[]()
