--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -26,7 +26,20 @@
     
     **注意：作为"AS"列标签名称都适用。**
   
-  + 核心关键字列表（这里以1，2，4为主）
+  + 核心关键字列表（这里以上面列举的1，2，4为主）
+    下面关键字以PG9.6为参考，文档中的说明并不是特别清晰，（并且KEYWORDS与版本强相关），所以使用pg_get_keywords这个系统函数得到的，更加准确可读：
+```
+postgres=# select * from pg_get_keywords();  
+       word        | catcode |                   catdesc                      
+-------------------+---------+----------------------------------------------  
+ abort             | U       | unreserved  
+ absolute          | U       | unreserved  
+ access            | U       | unreserved  
+ action            | U       | unreserved  
+ add               | U       | unreserved  
+ admin             | U       | unreserved  
+.............  
+```
   
 |编号|SQL关键字(Key Word)|PostgreSQL9.6|
 |:-:|-|-|
