--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -2,10 +2,15 @@
 ---
 
 ### 一、背景介绍
+  目前在迁移Oracle数据库到PPAS数据中，发现存在很多标示符的命名存在不规范的问题，比如：带特殊字符、有中文、数字开头、带聚合函数等。
+  
+  Oracle默认是将标识符转成 大写 的，而 PPAS|PG 默认是将标识符转成 小写 的，因此在转换的过程中就不能保留引号，只有这样才是兼容性最好的（即是把引号去掉）。但是 对一些命名不规范的标示符就需要做特殊处理。
+  
+### 二、Oracle 到 PPAS 特殊标示符 转换
 
 
 
-### 二、PPAS解决方案
+
 
 
 ### 三、参考连接
