--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -7,7 +7,29 @@
   Oracle默认是将标识符转成 大写 的，而 PPAS|PG 默认是将标识符转成 小写 的，因此在转换的过程中就不能保留引号，只有这样才是兼容性最好的（即是把引号去掉）。但是 对一些命名不规范的标示符就需要做特殊处理。
   
 ### 二、Oracle 到 PPAS 特殊标示符 转换
+1. 中文
+	<1>. 纯中文： 引号保留
+	<2>. 中文带特殊字符：引号保留
+	<3>. 中文带字母和数字： 引号去除
+	<4>. 中文带特殊字符和字母：引号保留
 
+2. 特殊字符
+   <1>字母+特殊字符+数字: 引号保留
+
+特殊字符列表：
+
+
+3. 带聚合函数，如：SUM(NAME)
+   引号保留
+
+4. 标示符包含小写字母
+   "aBc"
+
+
+5. 标示符是数字开头,保留双引号
+
+
+6. 关键字：见关键字部分
 
 
 
