--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -7,33 +7,48 @@
   Oracle默认是将标识符转成 大写 的，而 PPAS|PG 默认是将标识符转成 小写 的，因此在转换的过程中就不能保留引号，只有这样才是兼容性最好的（即是把引号去掉）。但是 对一些命名不规范的标示符就需要做特殊处理。
   
 ### 二、Oracle 到 PPAS 特殊标示符 转换
-1. 中文
-	<1>. 纯中文： 引号保留
-	<2>. 中文带特殊字符：引号保留
-	<3>. 中文带字母和数字： 引号去除
-	<4>. 中文带特殊字符和字母：引号保留
+1. 中文：双引号可以去除也可以不去除
+2. 特殊字符：双引号保留
+```
+特殊字符列表：（结合ASCII码值表进行判断）
+ *
+ ()
+ （） 
+ / 
+ \
+ = 
+ . 
+ : 
+ 空格 
+ ; 
+ ! 
+ ' 
+ " 
+ % 
+ & 
+ + 
+ , 
+ - 
+ :
+ ; 
+ < 
+ > 
+ ? 
+ @ 
+ [ ] 
+ ^ 
+ { }
+ |
+ ~
 
-2. 特殊字符
-   <1>字母+特殊字符+数字: 引号保留
+```
+3. 带聚合函数，如：SUM(NAME)：双引号保留
+4. 标示符包含小写字母：双引号保留
+5. 标示符是数字开头：双引号保留
 
-特殊字符列表：
-
-
-3. 带聚合函数，如：SUM(NAME)
-   引号保留
-
-4. 标示符包含小写字母
-   "aBc"
-
-
-5. 标示符是数字开头,保留双引号
-
-
-6. 关键字：见关键字部分
-
-
-
-
+6. 关键字：见[关键字](https://github.com/oomdb/ora2opendb/blob/master/ppas/20180628/20180628_01.md)部分
 
 ### 三、参考连接
-1.[]()
+1.[Identifiers and Key Words](https://www.postgresql.org/docs/9.6/static/sql-syntax-lexical.html#SQL-SYNTAX-IDENTIFIERS)
+2.[Special Characters](https://www.postgresql.org/docs/9.6/static/sql-syntax-lexical.html#SQL-SYNTAX-SPECIAL-CHARS)
+3.[PL/SQL Language Fundamentals](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/fundamentals.htm#LNPLS002)
