--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -46,7 +46,7 @@
 4. 标示符包含小写字母：双引号保留
 5. 标示符是数字开头：双引号保留
 
-6. 关键字：见[关键字](https://github.com/oomdb/ora2opendb/blob/master/ppas/20180628/20180628_01.md)部分
+6. 关键字：需要标记，见[关键字](https://github.com/oomdb/ora2opendb/blob/master/ppas/20180628/20180628_01.md)部分
 
 ### 三、参考连接
 1.[Identifiers and Key Words](https://www.postgresql.org/docs/9.6/static/sql-syntax-lexical.html#SQL-SYNTAX-IDENTIFIERS)
