--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -4,3 +4,32 @@
 ### 一、背景
   在做异构数据库迁移时，数据类型的差异是需要核对和验证的第1步，因此，正确的数据转换就显的尤其重要，下面梳理了Oracle到MySQL的常见的数据类型的转换规则。
 ### 二、数据类型对比列表
+
+1. 字符类型(String Types)
+
+
+2. 数值类型(Numeric Types)
+
+
+
+3. 日期类型(Date and Time Types)
+
+
+
+4. LONG/RAW/大对象类型
+
+
+
+5. ROWID类型
+   
+   
+
+6. 空间类型(Spatial Data Types)
+
+
+7. JSON类型(JSON Data Type)
+
+
+8. 用户自定义类型(UDT)
+
+9. 其他类型
