--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -7,6 +7,13 @@
 
 1. 字符类型(String Types)
 
+|Oracle|说明|MySQL|说明|
+|:-:|-|-|-|
+|CHAR [(size [BYTE | CHAR])]||||
+|VARCHAR2(size [BYTE | CHAR])||||
+|NCHAR[(size)]||||
+|NVARCHAR2(size)||||
+
 
 2. 数值类型(Numeric Types)
 
