--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -9,8 +9,8 @@
 
 |Oracle|说明|MySQL|说明|
 |:-:|-|-|-|
-|CHAR [(size [BYTE | CHAR])]||||
-|VARCHAR2(size [BYTE | CHAR])||||
+|CHAR [(size [BYTE / CHAR])]||||
+|VARCHAR2(size [BYTE/ CHAR])||||
 |NCHAR[(size)]||||
 |NVARCHAR2(size)||||
 
