--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -9,7 +9,7 @@
 
 |Oracle|说明|MySQL|说明|
 |:-:|-|-|-|
-|CHAR [(size [BYTE \| CHAR])]||||
+|CHAR [(size [BYTE \| CHAR])]|固定长度字符串，不足空格填充，太长报错,长度最小1字节，最大2000字节，如果CHAR(size CHAR) 取决于数据库字符集，范围长度从1字节到4字节，NLS_LENGTH_SEMANTICS参数默认是字节语法|||
 |VARCHAR2(size [BYTE \| CHAR])||||
 |NCHAR[(size)]||||
 |NVARCHAR2(size)||||
