--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -11,7 +11,7 @@
 |:-:|-|-|-|
 |CHAR [(size [BYTE \| CHAR])]|固定长度字符串，不足空格填充，太长直接报错,长度最小1字节，最大2000字节，如果CHAR(size CHAR) 取决于数据库字符集，范围长度从1字节到4字节，NLS_LENGTH_SEMANTICS参数默认是字节语法|||
 |VARCHAR2(size [BYTE \| CHAR])||||
-|NCHAR[(size)]||||
+|NCHAR[(size)]|Unicode数据类型，最大长度取决于国家字符集，最大2000字节，不足空格填充，CHAR值不可以插入NCHAR列，反之NCHAR值可以插入CHAR列|||
 |NVARCHAR2(size)||||
 
 
