--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -4,6 +4,11 @@
 ### 一、背景
   在做异构数据库迁移时，数据类型的差异是需要核对和验证的第1步，因此，正确的数据转换就显的尤其重要，下面梳理了Oracle到MySQL的常见的数据类型的转换规则。
 ### 二、数据类型对比列表
+  + Oracle 可以使用 ***BYTE（字节）*** 和 ***CHAR（字符*** 列大小语法,默认是 BYTE字节，受系统参数NLS_LENGTH_SEMANTICS=BYTE|CHAR空值，不建议修改此参数。在多字节字符集中 1个字符可以是多个字节，如：字符集设置成ZHS16GBK：汉字占2个字节；字符集设置成AL32UTF8：汉字占3个字节。可以通过NLS_CHARACTERSET查看字符集。
+  
+  + MySQL 默认是按照 ***字符*** 进行存储的。
+  
+  
 
 1. 字符类型(String Types)
 
