--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -6,7 +6,13 @@
 ### 二、数据类型对比列表
   + Oracle 可以使用 ***BYTE（字节）*** 和 ***CHAR（字符*** 列大小语法,默认是 BYTE字节，受系统参数NLS_LENGTH_SEMANTICS=BYTE|CHAR空值，不建议修改此参数。在多字节字符集中 1个字符可以是多个字节，如：字符集设置成ZHS16GBK：汉字占2个字节；字符集设置成AL32UTF8：汉字占3个字节。可以通过NLS_CHARACTERSET查看字符集。
   
-  + MySQL 默认是按照 ***字符*** 进行存储的。
+  + MySQL5.x 版本后，默认是按照 ***字符*** 进行存储的。
+  
+  字符集的选择
+  |数据库类型|字符集|说明|
+  |:-:|-|-|
+  |Oracle|ZHS16GBK|
+  |MySQL|UTF8|
   
   
 
