--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -8,11 +8,12 @@
   
   + MySQL5.x 版本后，默认是按照 ***字符*** 进行存储的。
   
-  字符集的选择
+  **字符集的选择**
+  
   |数据库类型|字符集|说明|
   |:-:|-|-|
-  |Oracle|ZHS16GBK|
-  |MySQL|UTF8|
+  |Oracle|ZHS16GBK、AL32UTF8|中文字符集 或者 UT8字符集|
+  |MySQL|UTF8|...|
   
   
 
