--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -12,7 +12,7 @@
   
   |数据库类型|字符集|说明|
   |:-:|-|-|
-  |Oracle|ZHS16GBK、AL32UTF8|中文字符集 或者 UT8字符集|
+  |Oracle|ZHS16GBK、AL32UTF8、AF16UTF16（国家字符集）|ZHS16GBK（2字节编码）、AL32UTF8（3字节编码）|
   |MySQL|UTF8|...|
   
   
