--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -13,9 +13,7 @@
   |数据库类型|字符集|说明|
   |:-:|-|-|
   |Oracle|ZHS16GBK、AL32UTF8、AF16UTF16（国家字符集）|ZHS16GBK（2字节编码）、AL32UTF8（3字节编码）|
-  |MySQL|UTF8|...|
-  
-  
+  |MySQL|latin1、gb2312/gbk、utf8/utf8mb4|latin1（1字节编码）、gb2312/gbk(2字节编码)、utf8（3字节编码）、utf8mb4（4字节编码）|
 
 1. 字符类型(String Types)
 
