--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -1,4 +1,4 @@
-## Ora2MySQL兼容性分析 之 数据类型
+## Ora2MySQL兼容性分析 之 数据类型（1） 字符类型
 ---
 
 ### 一、背景
@@ -16,13 +16,24 @@
   |MySQL|latin1、gb2312/gbk、utf8/utf8mb4|latin1（1字节编码）、gb2312/gbk(2字节编码)、utf8（3字节编码）、utf8mb4（4字节编码）|
 
 1. 字符类型(String Types)
+**Oracle**
+|Oracle|说明|
+|:-:|-|
+|CHAR [(size [BYTE \| CHAR])]|固定长度字符串，不足空格填充，太长直接报错,长度最小1字节/字符，最大2000字节/字符，如果CHAR(size CHAR) 取决于数据库字符集，范围长度从1字节到4字节，NLS_LENGTH_SEMANTICS参数默认是字节语法|
+|VARCHAR2(size [BYTE \| CHAR])|必须指定长度size,变长字符串,最小1字节/字符，但是允许存0字节的空字符串(''), 最大4000字节/字符，建议用VARCHAR2代替VARCHAR,两者是同义词，VARCHAR被设计另有用途|
+|NCHAR[(size)]|Unicode数据类型，最大长度取决于国家字符集，最小1字符，最大2000字节，不足空格填充，CHAR值不可以插入NCHAR列，反之NCHAR值可以插入CHAR列，AL16UTF16字符集2倍， UTF8字符集3倍|
+|NVARCHAR2(size)|等同于NVARCHAR(size),必须指定长度size,Unicode数据类型，最大长度取决于国家字符集，最大4000字节,AL16UTF16字符集2倍， UTF8字符集3倍|
 
-|Oracle|说明|MySQL|说明|
-|:-:|-|-|-|
-|CHAR [(size [BYTE \| CHAR])]|固定长度字符串，不足空格填充，太长直接报错,长度最小1字节/字符，最大2000字节/字符，如果CHAR(size CHAR) 取决于数据库字符集，范围长度从1字节到4字节，NLS_LENGTH_SEMANTICS参数默认是字节语法|||
-|VARCHAR2(size [BYTE \| CHAR])|必须指定长度size,变长字符串,最小1字节/字符，但是允许存0字节的空字符串(''), 最大4000字节/字符，建议用VARCHAR2代替VARCHAR,两者是同义词，VARCHAR被设计另有用途|||
-|NCHAR[(size)]|Unicode数据类型，最大长度取决于国家字符集，最小1字符，最大2000字节，不足空格填充，CHAR值不可以插入NCHAR列，反之NCHAR值可以插入CHAR列，AL16UTF16字符集2倍， UTF8字符集3倍|||
-|NVARCHAR2(size)|等同于NVARCHAR(size),必须指定长度size,Unicode数据类型，最大长度取决于国家字符集，最大4000字节,AL16UTF16字符集2倍， UTF8字符集3倍|||
+**MySQL**
+|Oracle|说明|
+|:-:|-|
+|CHAR[(M)]||
+|VARCHAR(M)||
+|NATIONAL CHAR[(M)]||
+|NATIONAL VARCHAR(M)||
+
+**【Oracle ---> MySQL】 映射关系**
+
 
 
 
