--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -30,10 +30,8 @@
 
 |Oracle|说明|
 |:-:|-|
-|CHAR[(M)]||
-|VARCHAR(M)||
-|NATIONAL CHAR[(M)]||
-|NATIONAL VARCHAR(M)||
+|[NATIONAL] CHAR[(M)]||
+|[NATIONAL] VARCHAR(M)||
 
 **【Oracle ---> MySQL】 映射关系**
 
