--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -30,8 +30,8 @@
 
 |Oracle|说明|
 |:-:|-|
-|[NATIONAL] CHAR[(M)]||
-|[NATIONAL] VARCHAR(M)||
+|[NATIONAL] CHAR[(M)]|固定长度字符串，右填充空格，M 长度范围从 0 到 255 字符. 如果 M 不提供, 则默认是 1 字符，检索是，如果启用PAD_CHAR_TO_FULL_LENGTH的sql_mode 则char的空格不被去除|
+|[NATIONAL] VARCHAR(M)|变长字符串，M 长度范围从 0 到 65,535 字符，utf8 是 1个字符 对应3个字节，最大 21,844 字符,需要 1-byte 或者 2-byte 前缀，长度不超过255 bytes 需要1字节 , 长度超过255 bytes需要2字节；检索不去除空格|
 
 **【Oracle ---> MySQL】 映射关系**
 
