--- a/ppas/20180808/20180808_1.md
+++ b/ppas/20180808/20180808_1.md
@@ -1,7 +1,8 @@
 ## Oracle PPAS 兼容性分析 之 管道函数（Pipelined Table Function）
 ---
 
-### 一、
+### 一、Oracle管道函数（Pipelined Table Function）
+https://docs.oracle.com/database/121/LNPLS/img/plsql_function_source.gif
 
 
 ### 二、
