--- a/ppas/20180808/20180808_1.md
+++ b/ppas/20180808/20180808_1.md
@@ -2,7 +2,7 @@
 ---
 
 ### 一、Oracle管道函数（Pipelined Table Function）
-https://docs.oracle.com/database/121/LNPLS/img/plsql_function_source.gif
+![Pipelined管道函数语法](https://docs.oracle.com/database/121/LNPLS/img/plsql_function_source.gif)
 
 
 ### 二、
