--- a/ppas/20180808/20180808_1.md
+++ b/ppas/20180808/20180808_1.md
@@ -2,7 +2,11 @@
 ---
 
 ### 一、Oracle管道函数（Pipelined Table Function）
-Pipelined管道函数语法：
+
+返回 **table function** 的结果集，table function 返回集合collect类型（nested table 或 varray），table function使用语法如下：
+```
+SELECT * FROM TABLE(function_name(...))
+```
 
 
 
