--- a/ppas/20180808/20180808_1.md
+++ b/ppas/20180808/20180808_1.md
@@ -3,7 +3,7 @@
 
 ### 一、Oracle管道函数（Pipelined Table Function）
 
-返回 **table function** 的结果集，table function 返回集合collect类型（nested table 或 varray），table function使用语法如下：
+返回 **table function** 的结果集，table function 返回集合collect类型（nested table 或 varray），table function查询如下：
 ```
 SELECT * FROM TABLE(function_name(...))
 ```
