--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -23,7 +23,7 @@
 |:-:|-|-|
 |CHAR [(size [BYTE \| CHAR])]|固定长度字符串，不足空格填充，太长直接报错,长度最小1字节/字符，最大2000字节/字符，如果CHAR(size CHAR) 取决于数据库字符集，范围长度从1字节到4字节，NLS_LENGTH_SEMANTICS参数默认是字节语法|CHARACTER = CHAR|
 |VARCHAR2(size [BYTE \| CHAR])|必须指定长度size,变长字符串,最小1字节/字符，但是允许存0字节的空字符串(''), 最大4000字节/字符，建议用VARCHAR2代替VARCHAR,两者是同义词，VARCHAR被设计另有用途|CHARACTER VARYING = VARCHAR|
-|NCHAR[(size)]|Unicode数据类型，最大长度取决于国家字符集，最小1字符，最大2000字节，不足空格填充，CHAR值不可以插入NCHAR列，反之NCHAR值可以插入CHAR列，AL16UTF16字符集2倍， UTF8字符集3倍|NATIONAL CHAR = NCHAR|
+|NCHAR[(size)]|Unicode数据类型，最大长度取决于国家字符集，最小1字符，最大2000字节，不足空格填充，CHAR值不可以插入NCHAR列，反之NCHAR值可以插入CHAR列，AL16UTF16字符集2倍， UTF8字符集3倍|NATIONAL CHAR= NCHAR|
 |NVARCHAR2(size)|等同于NVARCHAR(size),必须指定长度size,Unicode数据类型，最大长度取决于国家字符集，最大4000字节,AL16UTF16字符集2倍， UTF8字符集3倍|NATIONAL VARCHAR = NVARCHAR|
 
 **MySQL**
@@ -36,9 +36,15 @@
 
 **【Oracle ---> MySQL】 映射关系**
 
-|Oracle|MySQL|备注|
-|:-:|-|-|
-|....|....|...|
+**单位：字符长度**
+其中的M表示多字节字符，具体取决于字符集，如：ZHS16GBK:2；AL32UTF8/utf8:3；utf8mb4:4 等，MySQL5.6建议字符集为utf8，MySQL5.7+ 建议字符集为utf8mb4，但是RDS目前提供的版本均是utf8。
+
+|Oracle|转换条件|MySQL|备注|
+|:-:|-|-|-|
+|CHAR[(N BYTE)]| 0 < N <= 255|CHAR[(N)]|Oracle的字符范围为：1 ~ floor(N/M) ；MySQL的字符范围为：0 ~ N|
+|CHAR[(N BYTE)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
+|CHAR[(N CHAR)]| 0 < N <= 255|CHAR[(N)]|Oracle的字符范围为：1 ~ N ；MySQL的字符范围为：0 ~ N|
+|CHAR[(N CHAR)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
 
 
 
