--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -41,8 +41,8 @@
 
 |Oracle|转换条件|MySQL|备注|
 |:-:|-|-|-|
-|CHAR[(N BYTE)]| 0 < N <= 255|CHAR[(N)]|Oracle的字符范围为：1 ~ floor(N/M) ；MySQL的字符范围为：0 ~ N|
-|CHAR[(N BYTE)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
+|CHAR[(N BYTE)]\|CHAR[(N)]| 0 < N <= 255|CHAR[(N)]|Oracle的字符范围为：1 ~ floor(N/M) ；MySQL的字符范围为：0 ~ N|
+|CHAR[(N BYTE)]\|CHAR[(N)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
 |CHAR[(N CHAR)]| 0 < N <= 255|CHAR[(N)]|Oracle的字符范围为：1 ~ N ；MySQL的字符范围为：0 ~ N|
 |CHAR[(N CHAR)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
 
