--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -45,8 +45,15 @@
 |CHAR[(N BYTE)]\|CHAR[(N)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
 |CHAR[(N CHAR)]| 0 < N <= 255|CHAR[(N)]|Oracle的字符范围为：1 ~ N ；MySQL的字符范围为：0 ~ N|
 |CHAR[(N CHAR)]| 255 < N <= 2000|VARCHAR(N)|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
+|VARCHAR2(N BYTE)\|VARCHAR(N BYTE)| 0 < N <= 2000|VARCHAR(N)|Oracle的字符范围为：1 ~ floor(N/M) ；MySQL的字符范围为：0 ~ N|
+|VARCHAR2(N BYTE)\|VARCHAR(N BYTE)| 2000 < N <= 4000|TEXT|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
+|VARCHAR2(N CHAR)\|VARCHAR(N CHAR)| 0 < N <= 2000|VARCHAR(N)|Oracle的字符范围为：1 ~ N ；MySQL的字符范围为：0 ~ N|
+|VARCHAR2(N CHAR)\|VARCHAR(N CHAR)| 2000 < N <= 4000|TEXT|MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
+|NCHAR[(N)]|0 < N <= 255|NCHAR[(N)]|Oracle字符范围：1 ~ floor(N/M)；MySQL的字符范围为：0 ~ N|
+|NCHAR[(N)]|255 < N <= 1000|NVARCHAR(N)|Oracle字符范围：1 ~ floor(N/M)；MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
+|NVARCHAR2(N)\|NVARCHAR(N)|0 < N <= 2000|NVARCHAR(N)|Oracle字符范围：1 ~ floor(N/M)；MySQL的字符范围：0 ~ floor(N/M)，但是受单行64k大小限制，以及额外的1~2字节（取决于值是否大于255字节）|
 
-
+**注意：其中的 N 默认值是1，且NCHAR内部自动转为CHAR；NVARCHAR内部自动转换为VARCHAR，取决于该列字符集的设置，默认是utf8.** 
 
 
 
