--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -37,7 +37,7 @@
 **【Oracle ---> MySQL】 映射关系**
 
 **单位：字符长度**
-其中的M表示多字节字符，具体取决于字符集，如：ZHS16GBK:2；AL32UTF8/utf8:3；utf8mb4:4 等，MySQL5.6建议字符集为utf8，MySQL5.7+ 建议字符集为utf8mb4，但是RDS目前提供的版本均是utf8。
+其中的M表示多字节字符，具体取决于字符集，如：ZHS16GBK:2；AL32UTF8/utf8:3；utf8mb4:4 等，MySQL5.6建议字符集为utf8，MySQL5.7+ 建议字符集为utf8mb4，但是RDS目前提供的版本均是utf8，其中N范围的划分，只是个相对很准确的值，未划分的特别精细。
 
 |Oracle|转换条件|MySQL|备注|
 |:-:|-|-|-|
