--- a/mysql/20180729/20180729_01.md
+++ b/mysql/20180729/20180729_01.md
@@ -55,7 +55,19 @@
 
 **注意：其中的 N 默认值是1，且NCHAR内部自动转为CHAR；NVARCHAR内部自动转换为VARCHAR，取决于该列字符集的设置，默认是utf8.** 
 
+```
+Oracle的char转换为MySQL的varchar的补充check约束，可选项
+-- 1. Oracle 写法
+create table t_om_char(
+	name char(300)
+);
 
+-- 2. MySQL 写法
+create table `t_om_char`(
+	`name` varchar(300) check (0 <char_length(`name`) <=300)
+);
+
+```
 
 
 2. 数值类型(Numeric Types)
