--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -3,11 +3,18 @@
 
 ### 一、数值类型(Numeric Types)对比
 
+**1.Oracle数值类型**
 
  NUMBER(precision,scale)
- 
  FLOAT(precision)
- 
  BINARY_FLOAT
- 
  BINARY_DOUBLE
+
+
+**2.MySQL数值类型**
+
+
+
+**3.转换规则**
+
+
