--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -13,9 +13,9 @@
 
 **2.MySQL数值类型**
 
-|数据库类型|存储空间|范围|说明|
+|数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
-|BIT[(M)]|将近 (M+7)/8 字节|范围从1 ~ 64，默认是 1|指定bit常量值：b'value' 或者  0bvalue，其中的value只能是 0 或者 1|
+|BIT[(M)]|约 (M+7)/8 字节|范围：1 ~ 64，默认 1|指定bit常量值：b'value' 或 0bvalue，其中value只能是 0 或者 1|
 
 
 **3.转换规则**
