--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -16,6 +16,8 @@
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
 |BIT[(M)]|约 (M+7)/8 字节|范围：1 ~ 64，默认 1|指定bit常量值：b'value' 或 0bvalue，其中value只能是 0 或者 1|
+|TINYINT[(M)] [UNSIGNED] [ZEROFILL]| 1 字节|有符号：-128 ~ 127，符号：0 ~ 255|小整型，BOOL, BOOLEAN是 TINYINT(1) 的同义词，0 被看做为 false，非 0 被看为 true|
+
 
 
 **3.转换规则**
