--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -17,6 +17,16 @@
 |:-:|-|-|-|
 |BIT[(M)]|约 (M+7)/8 字节|范围：1 ~ 64，默认 1|指定bit常量值：b'value' 或 0bvalue，其中value只能是 0 或者 1|
 |TINYINT[(M)] [UNSIGNED] [ZEROFILL]| 1 字节|有符号：-128 ~ 127，符号：0 ~ 255|小整型，BOOL, BOOLEAN是 TINYINT(1) 的同义词，0 被看为 false，非 0 被看为 true|
+|SMALLINT[(M)] [UNSIGNED] [ZEROFILL]| 2 字节|有符号：-32768 ~ 32767，无符号：0 ~ 65535|小整型|
+|MEDIUMINT[(M)] [UNSIGNED] [ZEROFILL]| 3 字节|有符号： -8388608 ~ 8388607，无符号：0 ~ 16777215|中等大小整型|
+|INT[(M)] [UNSIGNED] [ZEROFILL]| 4 字节|有符号： -2147483648 ~ 2147483647，无符号：0 ~ 4294967295|正常大小的整型，INTEGER[(M)] [UNSIGNED] [ZEROFILL]，NTEGER 是 INT 的同义词|
+|BIGINT[(M)] [UNSIGNED] [ZEROFILL]| 8 字节|有符号：-9223372036854775808 ~ 9223372036854775807，无符号：0 ~ 18446744073709551615|大整型，SERIAL 是 BIGINT UNSIGNED NOT NULL AUTO_INCREMENT UNIQUE 的别名，SERIAL DEFAULT VALUE 是 NOT NULL AUTO_INCREMENT UNIQUE 的别名|
+|DECIMAL[(M[,D])] [UNSIGNED] [ZEROFILL]| |M最大值为 65， 默认值是 10，D的最大值为 30 ，默认值是 0|小数点 以及 - 减号不计入到M中，等价于 NUMERIC|
+|DEC[(M[,D])] [UNSIGNED] [ZEROFILL]，DEC[(M[,D])] [UNSIGNED] [ZEROFILL], NUMERIC[(M[,D])] [UNSIGNED] [ZEROFILL], FIXED[(M[,D])] [UNSIGNED] [ZEROFILL] 是 DECIMAL的同义词， FIXED同义词是为了兼容其他数据库|
+|FLOAT[(M,D)] [UNSIGNED] [ZEROFILL]| 4 字节|允许的值为： -3.402823466E+38 ~ -1.175494351E-38,  0 , 和  1.175494351E-38 ~ 3.402823466E+38|小的单精度浮点数，最大可以精确到小数点后 7 位。值超过长度，则进行四舍五入|
+|DOUBLE[(M,D)] [UNSIGNED] [ZEROFILL]| 8 字节|允许的值为： -1.7976931348623157E+308 ~ -2.2250738585072014E-308, 0, 和  2.2250738585072014E-308 ~ 1.7976931348623157E+308|正常双精度浮点数，最大可以精确到小数点后 15 位。值超过长度，则进行四舍五入，DOUBLE PRECISION[(M,D)] [UNSIGNED] [ZEROFILL], REAL[(M,D)] [UNSIGNED] [ZEROFILL] 是 DOUBLE 的同义词，如果 REAL_AS_FLOAT 的 SQL mode启用，REAL 是 FLOAT 的同义词而不是DOUBLE|
+|FLOAT(p) [UNSIGNED] [ZEROFILL]| 4 bytes if 0 <= p <= 24, 8 bytes if 25 <= p <= 53|浮点数，如果 p的范围是 0 ~ 24，数据类型变为 FLOAT 且没有M和D值 ，p的范围是 25 ~ 53，数据类型变为 DOUBLE 且没有M和D值，FLOAT(p) 语法是为ODBC兼容性而提供的|
+
 
 
 
