--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -9,9 +9,17 @@
  FLOAT(precision)
  BINARY_FLOAT
  BINARY_DOUBLE
-
+ 
 
 **2.MySQL数值类型**
+M 表示整型的最大显示宽度，其中允许的最大显示宽度是255.对 floating-point 和 fixed-point 类型, M 是可以存储的总数字.
+如果数值列指定了ZEROFILL, 则MySQL自动为该列添加UNSIGNED属性. 默认是SIGNED的.整型之间做减法时，如果其中1个类型是UNSIGNED，则结果也是UNSIGNED，除非启动 NO_UNSIGNED_SUBTRACTION的 SQL mode.
+NO_AUTO_VALUE_ON_ZERO 的 SQL mode 的，针对AUTO_INCREMENT列 不和NULL一样自动加1，到最大值，又重新从1开始.
+从MySQL 5.6.9开始， 负值为 AUTO_INCREMENT 列还不支持。
+DECIMAL(M,D) 允许最大 M - D 位小数点左边的数字。
+TRADITIONAL =  STRICT_ALL_TABLES/STRICT_TRANS_TABLES + ERROR_FOR_DIVISION_BY_ZERO
+浮点型：A value with any fractional part is rounded to the nearest even integer
+
 
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
