--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -5,11 +5,12 @@
 
 **1.Oracle数值类型**
 
- NUMBER(precision,scale)
- FLOAT(precision)
- BINARY_FLOAT
- BINARY_DOUBLE
- 
+|数据类型|存储空间|范围|说明|
+|:-:|-|-|-|
+|NUMBER(precision,scale)|...|...|...|
+|FLOAT(precision)|...|...|...|
+|BINARY_FLOAT|...|...|...|
+|BINARY_DOUBLE|...|...|...|
 
 **2.MySQL数值类型**
 + M 表示整型的最大显示宽度，其中允许的最大显示宽度是255.对 floating-point 和 fixed-point 类型, M 是可以存储的总数字.
