--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -10,7 +10,7 @@
 |NUMBER(precision,scale)|...|...|...|
 |FLOAT(precision)|...|...|...|
 |BINARY_FLOAT| 4 字节|范围：1.17549E-38F ~  3.40282E+38F|32位单精度浮点型|
-|BINARY_DOUBLE| 8 字节|2.22507485850720E-308  ~ 1.79769313486231E+308|64位双精度浮点型|
+|BINARY_DOUBLE| 8 字节|范围：2.22507485850720E-308  ~ 1.79769313486231E+308|64位双精度浮点型|
 
 **2. MySQL数值类型**
 + M 表示整型的最大显示宽度，其中允许的最大显示宽度是255.对 floating-point 和 fixed-point 类型, M 是可以存储的总数字.
