--- a/mysql/20180810/20180810_01.md
+++ b/mysql/20180810/20180810_01.md
@@ -7,8 +7,8 @@
 
 |数据类型|存储空间|范围|说明|
 |:-:|-|-|-|
-|NUMBER(precision,scale)|...|...|...|
-|FLOAT(precision)|...|...|...|
+|NUMBER [ (p [, s]) ]|占用空间长度 1 ~ 22 字节|p 的范围是 1 ~ 38，s 的范围是 -84 ~ 127，范围：1.0 x 10^-130 ~ 1.0 x 10^126(左闭右开)|当 p < s，是针对包含e标记的，当值超过p报错，超过s则四舍五入，INTEGER = NUMBER（38,0)|
+|FLOAT [(p)]|占用空间长度 1 ~ 22 字节|p的范围： 1 ~ 126 |是NUMBER的子类型|
 |BINARY_FLOAT| 4 字节|范围：1.17549E-38F ~  3.40282E+38F|32位单精度浮点型|
 |BINARY_DOUBLE| 8 字节|范围：2.22507485850720E-308  ~ 1.79769313486231E+308|64位双精度浮点型|
 
